<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AC515C"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/but_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginBottom="4dp"
        android:text="@string/top" />

    <CheckBox
        android:id="@+id/c4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="56dp"
        android:text="@string/chennai" />

    <CheckBox
        android:id="@+id/c3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="88dp"
        android:text="@string/delhi" />

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="152dp"
        android:text="@string/mysore" />

    <CheckBox
        android:id="@+id/c2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="118dp"
        android:text="@string/banglore" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="184dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/select_city" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="86dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/imcwjs4"
        app:srcCompat="@drawable/imcwjs4"
        tools:ignore="RtlCompat"
        tools:src="@drawable/imcwjs4" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/selectage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="334dp"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/select_age"
        android:textStyle="bold"
        android:typeface="serif" />

    <RadioGroup
        android:id="@+id/age"
        android:layout_width="123dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="235dp">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="112dp"
            android:layout_height="42dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/_18_to_21"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/_22_to_30"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/_31_to_50"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/but_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="207dp"
        android:layout_marginBottom="4dp"
        android:text="@string/bottom" />


</RelativeLayout>